--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -132,6 +132,10 @@ a {
   }
   
 @media screen and (max-width:480px){
+    .c{
+        width: 100%;
+        margin-top: 50px;
+    }
     .c-wrapper{
         display: flex;
         flex-direction: column;
@@ -164,7 +168,6 @@ a {
     .footer{
 
         width: 100%;
-        height: 40vh;
         margin-bottom: 30px
 
     }
