--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -6,7 +6,7 @@
 .c-bg{
     width: 20px;
     height: 100%;
-    background-color: #59b256;
+    background-color: #032d3d;
     position: absolute;
 }
 
@@ -97,8 +97,8 @@ textarea{
 button{
     border: none;
     padding: 10px;
-    background-color: #59b256;
-    color: white;
+    background-color: #063e54;
+    color:  rgb(217, 208, 208);
     font-size: 15px;
     font-weight: 500;
     cursor: pointer;
