--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -64,7 +64,7 @@
     height: 50px;
     font-size: 30px;
     font-weight: bold;
-    color: #59b256;
+    color: #1f87b0;
     display: flex;
     align-items: center;
 }
@@ -78,17 +78,17 @@
 
 .i-img{
     position: absolute;
-    top: 50px;
+    top: 30px;
     width: 60%;
     height: 100%;
-    left: 200px;
+    left: 220px;
     overflow: hidden;
     
 }
 
 .i-bg{
     clip-path: polygon(100% 0%, 100% 44%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-    background-color: #59b256;
+    background-color: #032d3d;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -120,8 +120,12 @@
         display: none;
     }
     .i-img{
-      right: 50px;
+        top: 10px;
       left: 40%;
+      width: 50%;
+      height: 95%;
+      bottom: 10px;
+      
 
         
     }
