--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -160,7 +160,6 @@ a {
         margin-top: 0px;
         display: flex;
         flex-wrap: wrap;
-        margin-right: 20px;
         font-size: 20px;
     }
 
@@ -171,13 +170,23 @@ a {
     .footer{
 
         width: 100%;
-        margin-bottom: 30px
 
     }
 
     .submitted{
         margin-top: 20px;
         font-size: 15px;
+    }
+
+    input{
+        width: 80%;
+    }
+    textarea{
+        width: 100%;
+        height: 18vh;
+        margin: 10px 0px;
+        font-size: 14px;
+        padding-left: 10px;
     }
 
 }
