--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -136,6 +136,8 @@ a {
     .c{
         width: 100%;
         margin-top: 50px;
+        height: 100vh
+    
     }
     .c-wrapper{
         display: flex;
@@ -180,10 +182,11 @@ a {
 
     input{
         width: 80%;
+        height: 5vh;
     }
     textarea{
         width: 100%;
-        height: 18vh;
+        height: 16vh;
         margin: 10px 0px;
         font-size: 14px;
         padding-left: 10px;
