--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -18,6 +18,7 @@
 .a-right{
     flex:1;
     padding: 20px;
+    margin-top: 80px;
 }
 
 .a-card{
@@ -48,7 +49,7 @@
 }
 
 .a-title{
-    font-weight: 400;
+    font-weight: 600;
     color: #1f87b0;
 }
 
@@ -57,7 +58,9 @@
 }
 
 .a-desc{
-    font-weight: 300;
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 17px;
 }
 
 .a-award{
@@ -91,26 +94,30 @@
 .skills{
   color: #1f87b0;
     font-size: 25px;
-    font-weight: 500;
+    font-weight: 600;
     margin: 20px 0px;
+    margin-top: 40px;
 }
 
 .tech li{
     margin-right: 30px;
     font-size: 18px;
+    line-height: 1.5;
 }
 
 .technical{
-    font-weight: 400;
+    font-weight: 500;
     font-size: 20px;
     color: #1f87b0;
+    margin-bottom: -20px;
 }
 
 .v h3{
   font-size: 20px;
-  font-weight: 400;
-  margin-top: 20px;
+  font-weight: 500;
+  margin-top: 10px;
   color: #1f87b0;
+  margin-bottom: 15px;
 }
 .v li{
     font-size: 18px;
@@ -122,13 +129,17 @@
 .tools h3{
      margin-bottom: 10px;
      font-size: 20px;
-     font-weight: 400;
+     font-weight: 500;
      color: #1f87b0;
+     margin-top: 30px;
+     margin-bottom: 10px;
+
 }
 
 .tools li{
     font-size: 18px;
     margin-left: 10px;
+    line-height: 2;
 
 }
 @media screen and (max-width:480px) {
@@ -138,6 +149,7 @@
       margin-top: 50px;
       width: 100%;
       height: 100%;
+    
     }
   
     .a-left {
@@ -156,6 +168,12 @@
     .a-right {
       padding: 20px;
       height: auto;
+      margin-top: 10px;
+    }
+
+    .a-desc{
+      font-size: 15px;
+
     }
   
     .tech {
@@ -165,36 +183,39 @@
       margin: 10px;
       justify-content: start;
       align-items: start;
+      font-size: 15px;
+
     }
   
     .skills {
       font-size: 25px;
-      font-weight: 500;
+      font-weight: 600;
       margin: 20px 0px;
       text-align: left;
     }
   
     .tech li {
       margin-right: 30px;
-      font-size: 18px;
+      font-size: 15px;
     }
   
     .technical {
-      font-weight: 400;
+      font-weight: 500;
       font-size: 20px;
       text-align: left;
     }
   
     .v h3 {
       font-size: 20px;
-      font-weight: 400;
+      font-weight: 500;
       text-align: left;
+      margin-top: -10px;
     }
   
     .v li {
       width: 100%;
-      font-size: 18px;
-      margin-top: 30px;
+      font-size: 15px;
+      margin-top: 10px;
       margin-bottom: 20px;
       text-align: left;
       margin-right: 30px;
@@ -204,18 +225,19 @@
     .tools h3 {
       margin-bottom: 10px;
       font-size: 20px;
-      font-weight: 400;
+      font-weight: 500;
       text-align: left;
       margin-top: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
 
     }
   
     .tools li {
 
-      font-size: 18px;
+      font-size: 15px;
       margin-left: 10px;
       text-align: left;
+
     }
   }
   
