--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -16,6 +16,7 @@
     flex: 1;
     position: relative;
     overflow: hidden;
+    
 }
 
 .i-left-wrapper{
@@ -29,7 +30,7 @@
 
 .i-intro{
     font-size: 30px;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .i-name{
@@ -78,12 +79,20 @@
 
 .i-img{
     position: absolute;
-    top: 30px;
+    top: 50px;
     width: 60%;
-    height: 100%;
-    left: 220px;
+    height: 90%;
+    left: 250px;
     overflow: hidden;
+    border-radius: 10px;
     
+}
+
+.i-desc{
+    margin-top: 10px;
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 17px;
 }
 
 .i-bg{
