--- a/src/components/productList/productlist.css
+++ b/src/components/productList/productlist.css
@@ -4,22 +4,27 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin-top: 20px;
    
 }
 
 .pl-texts{
-    width: 65%;
+    width: 70%;
     
 }
 
 .pl-title{
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 600;
     color: #1f87b0;
 }
 
 .pl-desc{
     margin: 20px 0px;
+    height: 100%;
+    font-weight: 500;
+    line-height: 1.5;
+    font-size: 17px;
 }
 
 .pl-list{
@@ -34,14 +39,24 @@
 
     .pl{
         padding: 10px;
+        
        
     }
     .pl-texts{
         width: 100%;
+        font-size: 15px;
+
     }
     .pl-title{
         width: 100%;
-        font-size: 30px;
+        font-size: 25px;
+        font-weight: bold;
+    }
+
+    .pl-desc{
+        font-size: 14px;
+        line-height: 1.5;
+        padding: 0px 20px;
     }
      
 }
