--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -136,7 +136,8 @@ a {
     .c{
         width: 100%;
         margin-top: 50px;
-        height: 100vh
+        height: 100%;
+        margin-bottom: 30px;
     
     }
     .c-wrapper{
@@ -146,9 +147,11 @@ a {
     }
 
     .c-title{
-        font-size: 20px;
+        font-size: 30px;
         width: 100%;
         margin-top: 10px;
+        line-height: 1.5;
+        margin-bottom: 50px;
 
     }
 
@@ -174,12 +177,14 @@ a {
     .footer{
 
         width: 100%;
+        margin-top: 20px;
 
     }
 
     .submitted{
         margin-top: 20px;
         font-size: 15px;
+        margin-bottom: -50px;
     }
 
     input{
@@ -194,12 +199,11 @@ a {
         padding-left: 10px;
     }
     .c-icon{
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     margin-right: 20px;
     }
     .c-info-item{
-        font-size: 14px;
+        font-size: 18px;
     }
-
 }
