--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -104,7 +104,6 @@
     top: 0;
     right: 0;
 
-
 }
 
 @media screen and (max-width:480px){
@@ -114,7 +113,7 @@
     }
     
     .i-name{
-        margin-bottom: 20px;
+        margin-bottom: 40px;
     }
 
     .i-left-wrapper{
@@ -123,6 +122,7 @@
         text-align: center;
         justify-content: center;
         height: 100%;
+        overflow: hidden;
     }
 
     .i-desc{
@@ -130,13 +130,14 @@
     }
     .i-img{
         top: 10px;
-      left: 40%;
-      width: 50%;
+      left: 30%;
+      width: 65%;
       height: 95%;
       bottom: 10px;
-      
-
         
     }
-    
+    .i-right{
+       margin-top: -50px;
+       margin-bottom: 20px;
+    }
 }
