--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -124,6 +124,7 @@
         justify-content: center;
         height: 100%;
         overflow: hidden;
+        margin-top: -30px;
     }
 
     .i-desc{
