--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -111,6 +111,7 @@
         display: flex;
         flex-direction: column;
         overflow: hidden;
+        height: 100vh;
     }
     
     .i-name{
